# granit-parser

./: API_REVIEW.md  CHANGELOG.md  COMMENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: api-compat.yml  ci.yml  fuzz.yml  release.yml
.licenses/: ChenYuheng-Apache  ChenYuheng-MIT  Ethiraric-Apache  Ethiraric-MIT
examples/: custom_tags.rs  fallible_reader.rs  include_stack.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: directives_tags.rs
src/: char_traits.rs  error.rs  input.rs  lib.rs  parser.rs  parser_stack.rs  scanner.rs
src/input/: buffered.rs  str.rs
tests/: basic.rs  block_scalar_indentation.rs  block_scalar_keep.rs  closing_bracket.rs  comment.rs  comment_intercepts_line.rs  comments_possible.rs  coverage_edges.rs  document_markers.rs  empty_lines_an_chomping.rs  fallible_input.rs  fuzz.rs  indentation.rs  issues.rs  misplaced_flow_chars.rs  parser_input.rs  parser_input_regressions.rs  plain_scalar_indicators.rs  plain_tab.rs  readme.rs  regressions.rs  reserved_directive.rs  scanner_blocks.rs  scanner_tags_flow.rs  span.rs  spec_test.rs  test_non_ascii.rs  test_parser_stack.rs  test_surrogates.rs  test_wide_non_ascii_position.rs  unclosed_flow.rs  yaml-test-suite.rs
tools/: README.md  dump_events.rs  run_bench.rs  time_parse.rs
tools/bench_compare/: Cargo.toml  README.md
tools/bench_compare/src/: main.rs
tools/gen_large_yaml/: Cargo.toml
tools/walk/: Cargo.toml
tools/walk/src/: main.rs
