[package]
name = "walk"
readme = "README.md"
authors = [
  "Ethiraric <ethiraric@gmail.com>",
  "David Aguilar <davvid@gmail.com>",
  "Yuheng Chen <yuhengchen@sensetime.com>"
]
categories = [ "encoding", "parser-implementations" ]
description = "A fully YAML 1.2 compliant YAML library"
documentation = "https://docs.rs/saphyr"
edition = "2021"
keywords = [ "yaml", "parser" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/saphyr-rs/saphyr"
rust-version = "1.81.0"
version = "0.0.6"

[features]
debug_prints = []

[dependencies]
hashlink = "0.10"
miette = { version = "7.5.0", features = ["fancy"] }
rustyline = "17.0.2"
saphyr = "0.0.6"
thiserror = { version = ">= 2.0.15, <= 2.0.18", default-features = false }

[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
